discussion/kv_engine/159412/159412_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-47687: Prevent dropping of prepares which can be undone by Magma rollback

Magma creates checkpoints every few minutes which are used for
rollback. Since magma does background compaction it is possible
for compaction to drop deletes between the checkpoints. If
kv_engine requests a rollback to one of these checkpoints, the
sequence scan does not see the compacted keys resulting in the
rollback callback not being called for these keys. This patch
ensures we dont drop prepares until it is older than the oldest
magma checkpoint.

Change-Id: If6c3faa48e500506ca36f5282ced6f892018537d

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Apaar gupta
Date: 2021-08-16 13:43:06.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-08-16 14:01:24.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/38634/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc(232): error C2039: "MinRollbackSeqNo": is not a member of "magma::Magma" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/38634/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/11345/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:232:33: error: no member named "MinRollbackSeqNo" in "magma::Magma" [clang-diagnostic-error]
            magmaKVStore.magma->MinRollbackSeqNo(ctx->vbid.get());
                                ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/11345/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:232:33:
error: no member named "MinRollbackSeqNo" in "magma::Magma" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/11345/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/32939/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:232:33:
error: no member named "MinRollbackSeqNo" in "magma::Magma"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/32939/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/986/ : FAILURE

Compile error at [2021-08-16T13:50:22.294Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:232:33:
error: ?class magma::Magma? has no member named ?MinRollbackSeqNo?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/986/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/976/ : FAILURE

Compile error at [2021-08-16T13:55:29.622Z] kv_engine/engines/ep/CMakeFiles/ep_objs.dir/Unity/unity_10_cxx.cxx:3:10:
fatal error: "/home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/replicationthrottle.cc" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/976/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/12061/ : FAILURE

Compile error at [2021-08-16T13:45:44.742Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:232:33:
error: no member named "MinRollbackSeqNo" in "magma::Magma"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/12061/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/13143/ : FAILURE

Compile error at [2021-08-16T13:58:06.798Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:232:33:
error: ?class magma::Magma? has no member named ?MinRollbackSeqNo?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/13143/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/21058/ : FAILURE

Compile error at [2021-08-16T13:57:42.480Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:232:33:
error: no member named "MinRollbackSeqNo" in "magma::Magma"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/21058/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/13515/ : FAILURE

Compile error at [2021-08-16T13:57:31.208Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:232:33:
error: no member named "MinRollbackSeqNo" in "magma::Magma"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/13515/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/10046/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/12944/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
